--- a/config/aws/base/security_groups/sg_base.yaml
+++ b/config/aws/base/security_groups/sg_base.yaml
@@ -10,8 +10,8 @@ config:
   name: ???
   description: ???
   vpc_id: ???
-#  ingress_cidr_blocks: ???
-#  ingress_rules:  ???
+  ingress_cidr_blocks: ???
+  ingress_rules:  ???
   egress_rules:  [ "all-all" ]
   tags:
     Name: ???
