--- a/config/aws/shared/vpcs/vpc_base.yaml
+++ b/config/aws/shared/vpcs/vpc_base.yaml
@@ -20,6 +20,9 @@ outputs:
   vpc_id:
     lookup: "${...module_metadata.lookup}.outputs.vpc_id"
     description: "The VPC ID"
+  public_subnet_ids:
+    lookup: "${...module_metadata.lookup}.outputs.public_subnets"
+    description: "Public subnet ids"
 
 # provider specific config can be added here
 providers:
