--- a/config/aws/base/security_groups/sg_base.yaml
+++ b/config/aws/base/security_groups/sg_base.yaml
@@ -18,6 +18,9 @@ config:
     Owner: "Hunter-Labs"
 
 outputs:
+  security_group_id:
+    description: "The ID of the security group"
+    lookup: "${...module_metadata.lookup}.outputs.security_group_id"
 
 providers:
   # Set the provider that will create the infrastructure
