--- a/config/aws/base/security_groups/sg_base.yaml
+++ b/config/aws/base/security_groups/sg_base.yaml
@@ -20,7 +20,7 @@ config:
 outputs:
   security_group_id:
     description: "The ID of the security group"
-    lookup: "${...module_metadata.lookup}.outputs.security_group_id"
+    lookup: "${...module_metadata.lookup}.outputs.this_security_group_id"
 
 providers:
   # Set the provider that will create the infrastructure
