--- a/config/aws/base/ec2/ec2_base.yaml
+++ b/config/aws/base/ec2/ec2_base.yaml
@@ -19,6 +19,9 @@ config:
     Owner: "Hunter-Labs"
 
 outputs:
+  public_dns:
+    description: "Public DNS address of instance"
+    lookup: "${...module_metadata.lookup}.outputs.public_dns"
 
 providers:
   # Set the provider that will create the infrastructure
