--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -3,9 +3,10 @@ defaults:
   # Shared Infrastructure
   - aws/shared/vpcs@shared.vpc.simple_vpc: vpc_definitions/simple_vpc
   - aws/shared/key_pairs@shared.key_pairs.hunter_labs_key: key_pair_definitions/hunter_labs_key
-#  - aws/shared/security_groups@aws.shared.security_groups.enginetier: data_governance/dgv_enginetier
 
-  # Application/Project specific Infrastructure
+  # Application specific Infrastructure
+  - aws/apps/sandbox/security_groups@app.security_groups.local_access: local_access
+  - aws/apps/sandbox/ec2/@app.ec2.sandbox_instance: sandbox_instance
 #  - aws/middleware/ec2@aws.application.ec2.instances.enginetier: data_governance/enginetier
 #  - aws/middleware/ec2@middleware.ec2.servicetier: instance_definitions/servicetier
 #  - aws/middleware/ec2@middleware.ec2.enginetier: instance_definitions/enginetier
@@ -22,7 +23,8 @@ build:
   debug: True                   # Set to True to enable verbose debugging
   default_provider: "TerraGen"  # Provider used to create all infra unless overridden
   environment: "prod"           # Deployment environment must be one of dev|test|ppe|prod
-  shared_infra: "create"         # Must be one of create|destroy
+  shared_infra: "create"        # Process shared infra, Must be one of create|destroy|pass
+  app_infra: "create"           # Process application infra, must be one of create|destroy|pass
 
   # Register providers here, required provider_name, and provider_location further provider specific
   # config can be added as needed
