--- a/config/aws/shared/vpcs/vpc_base.yaml
+++ b/config/aws/shared/vpcs/vpc_base.yaml
@@ -1,4 +1,11 @@
-# Define multiple configurations in the configs section, as long as they match the default pattern
+module_metadata:
+  aws_service: "vpc"
+  name: "base_vpc"
+  lookup: "shared.base_vpc"
+  module_url: "https://registry.terraform.io/modules/terraform-aws-modules/vpc/aws/latest"
+  module_source: "terraform-aws-modules/vpc/aws"
+  module_version: "~> 3.0"
+
 config:
   name                 : "hunter-labs-vpc"
   cidr                 : "10.0.0.0/16"
@@ -8,6 +15,14 @@ config:
 
   tags:
     environment : ${build.environment}
+
+outputs:
+  vpc_id:
+    lookup: "${...module_metadata.lookup}.outputs.vpc_id"
+    description: "The VPC ID"
+  public_subnets:
+    lookup: "${...module_metadata.lookup}.outputs.public_subnets"
+    description: "Public subnet ids"
 
 # provider specific config can be added here
 providers:
@@ -19,14 +34,4 @@ providers:
 
   TerraGen:
       # Module metadata
-      module_url: "https://registry.terraform.io/modules/terraform-aws-modules/vpc/aws/latest"
-      module_source: "terraform-aws-modules/vpc/aws"
-      module_version: "~> 3.0"
 
-      # The root value for the S3 backend key, eg for moduleX path will become shared/vpc/moduleX/terraform.tfstate
-      s3_backend_root: "shared/vpc"
-
-      # Variables you want to add to outputs.tf file should be specified here
-      outputs:
-        vpc_id:
-          description: "The VPC ID"
