--- a/config/sandbox.yaml
+++ b/config/sandbox.yaml
@@ -1,21 +1,45 @@
-# Order is important py-tfvars will create infra in specified order specified in defaults object
+# Order is important terravarmer will create infra in specified order specified in defaults object
 defaults:
-  - vpc: vpc_base
-  - ec2@servicetier: instance_definitions/sandbox
+  # Shared Infrastructure
+  - aws/shared/vpcs@shared.vpc.simple_vpc: simple_vpc
+  - aws/shared/key_pairs@shared.key_pairs.hunter_labs_key: hunter_labs_key
 
+  # Application specific Infrastructure
+  - aws/apps/sandbox/security_groups@app.security_groups.local_access: local_access
+  - aws/apps/sandbox/ec2/@app.ec2.sandbox_instance: sandbox_instance
+
+
+# Provider overrides
+#aws:
+#  shared:
+#    vpc:
+#      providers:
+#        default_provider: "terraform"
 
 build:
-  # Deployment environment must be one of dev|test|prod
-  environment: "test"
+  debug: True                      # Set to True to enable verbose debugging
+  default_provider: "AWSProvider"  # Provider used to create all infra unless overridden
+  environment: "prod"              # Deployment environment must be one of dev|test|ppe|prod
+  shared_infra: "create"           # Process shared infra, Must be one of create|destroy|pass
+  app_infra: "create"              # Process application infra, must be one of create|destroy|pass
 
-  # If set to True terraform will apply the tfvars file generated
-  run_terraform: False
+  # Register providers here, required provider_name, and provider_location further provider specific
+  # config can be added as needed
+  registered_providers:
+    AWSProvider:
+      module_location: "providers.aws.aws_provider"
 
-  # Terraform mode must be one of create|destroy
-  terraform_mode: "create"
+      properties:
+        terraform_mode: "plan"  # Must be one of plan|apply - Plan produces terraform plan only, apply will create or destroy infra
 
-  # Create SG rules as defined in connectivity block
-  apply_connectivity_rules: False
+        provider_config:
+          terraform_provider: "AWS"
+          region: "us-east-1"          # The region we will deploy infrastructure to
+          profile: "hunter_ops_prod"   # The AWS profile used to deploy the infrastructure
 
-  # Set to true if you want to use AWS creds from local environment rather than os level
-  use_local_aws_creds: True
+        # Partial config for Terraform Backend see https://www.terraform.io/docs/language/settings/backends/configuration.html#partial-configuration
+        backend_config:
+          terraform_backend: "S3"
+          region: "us-east-1"
+          profile: "hunter_ops_prod"
+          bucket: "hunter-ops-tfstate"
