--- a/config/aws/base/ec2/ec2_base.yaml
+++ b/config/aws/base/ec2/ec2_base.yaml
@@ -14,6 +14,11 @@ config:
 
   key_name:                    ???
 
+  root_block_device:
+    encrypted:                 true
+    volume_type:               "gp3"
+    volume_size:               8
+
   tags:
     Name:  ???
     Owner: "Hunter-Labs"
