--- a/config/was/shared/vpcs/simple_vpc.yaml
+++ b/config/was/shared/vpcs/simple_vpc.yaml
@@ -10,3 +10,4 @@ config:
   azs:                  ["us-east-1a", "us-east-1b"]
   public_subnets:       ["10.0.100.0/24", "10.0.200.0/24"]
   enable_dns_hostnames: true
+  environment:          ${build.environment}
