work on modules

--- a/config/modules.yaml
+++ b/config/modules.yaml
@@ -4,6 +4,9 @@ defaults:
   - was/shared/vpcs@shared.vpc.simple_vpc: simple_vpc
   - was/shared/key_pairs@shared.key_pairs.hunter_labs_key: hunter_labs_key
 
+  # Apps
+  - was/apps/sandbox@app.ec2.sandbox: sandbox
+
 
 build:
   debug: True                      # Set to True to enable verbose debugging
