--- a/config/was/shared/vpcs/simple_vpc.yaml
+++ b/config/was/shared/vpcs/simple_vpc.yaml
@@ -1,15 +1,10 @@
+defaults:
+  - /was/base/vpcs@: vpc_base
+
 module_metadata:
-  aws_service: "vpc"
-  name: "simple_vpc"
-  state_file: "shared/vpc/simple_vpc/terraform.tfstate"
-  module_dir: "modules/aws/vpc"
+  name        : "simple_vpc"
+  state_file  : "shared/vpc/simple_vpc/terraform.tfstate"
 
 config:
   vpc_name:             "hunter-labs-vpc"
-  cidr:                 "10.0.0.0/16"
-  azs:                  ["us-east-1a", "us-east-1b"]
-  public_subnets:       ["10.0.100.0/24", "10.0.200.0/24"]
   enable_dns_hostnames: true
-  environment:          ${build.environment}
-
-lookups:
