--- a/config/modules.yaml
+++ b/config/modules.yaml
@@ -1,11 +1,11 @@
 # Order is important terravarmer will create infra in specified order specified in defaults object
 defaults:
   # Shared Infrastructure
-  - was/shared/vpcs@shared.vpc.simple_vpc: simple_vpc
-  - was/shared/key_pairs@shared.key_pairs.hunter_labs_key: hunter_labs_key
+  - aws/shared/vpcs@shared.vpc.simple_vpc: simple_vpc
+  - aws/shared/key_pairs@shared.key_pairs.hunter_labs_key: hunter_labs_key
 
   # Apps
-  - was/apps/sandbox@app.ec2.sandbox: sandbox
+  - aws/apps/sandbox@app.ec2.sandbox: sandbox
 
 
 build:
