--- a/config/aws/base/vpcs/vpc_base.yaml
+++ b/config/aws/base/vpcs/vpc_base.yaml
@@ -1,25 +1,15 @@
 module_metadata:
-  aws_service: "vpc"
-  name: "base_vpc"
-  lookup: "shared.base_vpc"
-  module_url: "https://registry.terraform.io/modules/terraform-aws-modules/vpc/aws/latest"
-  module_source: "terraform-aws-modules/vpc/aws"
-  module_version: "~> 3.0"
+  aws_service : "vpc"
+  module_dir  : "modules/aws/vpc"
+  name        : ???
+  state_file  : ???
 
 config:
-  name                 : "hunter-labs-vpc"
-  cidr                 : "10.0.0.0/16"
-  azs                  : ["us-east-1a", "us-east-1b"]
-  public_subnets       : ["10.0.100.0/24", "10.0.200.0/24"]
-  enable_dns_hostnames : false
+  vpc_name:             ???
+  cidr:                 "10.0.0.0/16"
+  azs:                  ["us-east-1a", "us-east-1b"]
+  public_subnets:       ["10.0.100.0/24", "10.0.200.0/24"]
+  enable_dns_hostnames: false
+  environment:          ${build.environment}
 
-  tags:
-    environment : ${build.environment}
-
-outputs:
-  vpc_id:
-    lookup: "${...module_metadata.lookup}.outputs.vpc_id"
-    description: "The VPC ID"
-  public_subnets:
-    lookup: "${...module_metadata.lookup}.outputs.public_subnets"
-    description: "Public subnet ids"
+lookups:
