--- a/config/sandbox.yaml
+++ b/config/sandbox.yaml
@@ -1,4 +1,5 @@
-# Order is important terravarmer will create infra in specified order specified in defaults object
+# Defaults defines how the final config object is composed.  Order is important terravarmer will create infra in
+# specified order specified in defaults object
 defaults:
   # Shared Infrastructure
   - aws/shared/vpcs@shared.vpc.simple_vpc: simple_vpc
@@ -8,25 +9,20 @@ defaults:
   - aws/apps/sandbox@app.ec2.sandbox: sandbox
 
 
+# Environment specific config lives here
+environment:
+  prod:
+    aws_account: 222866594907
+    region: "us-east-1"
+    profile: "hunter_ops_prod"
+    bucket: "hunter_ops_tfstate"
+
+
+# Build section controls how the modules we defined are built
 build:
+  cloud_provider: "AWSProvider"  # Provider used to create all infra
+  environment: "prod"            # Deployment environment must be one of dev|test|ppe|prod
+  infra_shared: "create"         # Process shared infra, Must be one of create|destroy|pass
+  infra_app: "create"            # Process application infra, must be one of create|destroy|pass
+  terraform_mode: "apply"         # Must be one of plan|apply - Plan produces terraform plan only, apply will create or destroy infra
   debug: True                      # Set to True to enable verbose debugging
-  default_provider: "AWSProvider"  # Provider used to create all infra unless overridden
-  environment: "prod"              # Deployment environment must be one of dev|test|ppe|prod
-  shared_infra: "create"           # Process shared infra, Must be one of create|destroy|pass
-  app_infra: "create"              # Process application infra, must be one of create|destroy|pass
-  aws_accounts:
-    prod: 222866594907
-
-  # Register providers here, required provider_name, and provider_location further provider specific
-  # config can be added as needed
-  registered_providers:
-    AWSProvider:
-      module_location: "providers.aws.aws_provider"
-
-      properties:
-        terraform_mode: "apply"  # Must be one of plan|apply - Plan produces terraform plan only, apply will create or destroy infra
-
-        # AWS Provider config
-        region: "us-east-1"          # The region we will deploy infrastructure to
-        profile: "hunter_ops_prod"   # The AWS profile used to deploy the infrastructure
-        bucket: "hunter-ops-tfstate"
