--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,4 +3,5 @@ site_url: https://readthedocs.org/projects/terragen/
 nav:
     - Home: index.md
     - Getting Started AWS: getting-started-aws.md
+    - Terragen Configuration: terragen-config.md
 theme: readthedocs
